--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title: xxxxx
+title: Building .........
 logo: /assets/img/logo.png
-description: xxxxxxxxxxxxxxxxxxxxxxxxx
-show_downloads: true
+description: Editing ..................
+show_downloads: false
 google_analytics:
 theme: jekyll-theme-minimal
