--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title: Building .........
+title: Junzhi(Raymond) Ning 
 logo: /assets/img/logo.png
-description: Editing ..................
+description: 
 show_downloads: false
 google_analytics:
 theme: jekyll-theme-minimal
