--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Junzhi(Raymond) Ning 
-logo: /assets/img/logo.png
-description: 
+logo: /assets/img/optimized_solution.jpg
+description: Portrait of a Man in Quest In pursuit of the unknown, yet satisfied.
 show_downloads: false
 google_analytics:
 theme: jekyll-theme-minimal
