--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,7 @@
 title: Junzhi(Raymond) Ning 
 logo: /assets/img/optimized_solution.jpg
 description: Portrait of a Man in Quest In pursuit of the unknown, yet satisfied.
-show_downloads: false
+show_downloads: true
 google_analytics:
-theme: jekyll-theme-minimal
+# theme: jekyll-theme-minimal
+theme: jekyll-theme-cayman
