--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Junzhi (Raymond) Ning 
 logo: /assets/img/optimized_solution.jpg
 description: Portrait of a Man in Quest In pursuit of the unknown, yet satisfied.
-show_downloads: true
+show_downloads: false
 google_analytics:
 theme: jekyll-theme-minimal
 # theme: jekyll-theme-cayman
