--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,6 @@ title: Junzhi (Raymond) Ning
 logo: /assets/img/optimized_solution.jpg
 description: Portrait of a Man in Quest of the unknown, yet satisfied.
 show_downloads: false
-google_analytics:
+google_analytics: G-5W8G7T15K5
 theme: jekyll-theme-minimal
 # theme: jekyll-theme-cayman
